--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+#version: '3.8'
 
 services:
   # Base de datos PostgreSQL
@@ -7,13 +7,13 @@ services:
     container_name: gestion_accesos_db
     environment:
       POSTGRES_DB: gestion_accesos
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
+      POSTGRES_USER: admin01
+      POSTGRES_PASSWORD: juanes321
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql 
     ports:
-      - "5432:5432"
+      - "5431:5431"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -25,19 +25,21 @@ services:
   # Aplicación FastAPI
   app:
     build: .
+    env_file:
+      - .env
     container_name: gestion_accesos_app
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres123@db:5432/gestion_accesos
+      - DATABASE_URL=postgresql://admin01:juanes321@db:5432/gestion_accesos
       - SECRET_KEY=clave-secreta-para-desarrollo-cambiar-en-produccion
       - DEBUG=true
       - LOG_LEVEL=INFO
     ports:
-      - "8000:8000"
+      - "5050:5050"
     depends_on:
       db:
         condition: service_healthy
     volumes:
-      - ./app:/app/app
+      - .:/app
     networks:
       - app_network
     restart: unless-stopped
@@ -54,13 +56,26 @@ services:
       - app_network
     restart: unless-stopped
 
+  # Tu docker-compose.yml actual + ESTO al final:
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    container_name: gestion_accesos_frontend
+    ports:
+      - "3000:80"
+    depends_on:
+      - app
+    networks:
+      - app_network
+
   # Nginx como proxy reverso (opcional)
   nginx:
     image: nginx:alpine
     container_name: gestion_accesos_nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:80"
+      - "8443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./ssl:/etc/nginx/ssl
