--- a/nginx.conf
+++ b/nginx.conf
@@ -3,76 +3,30 @@ events {
 }
 
 http {
-    upstream app {
-        server app:8000;
-    }
-
-    # Configuración de rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     server {
         listen 80;
         server_name localhost;
 
-        # Configuración de seguridad
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-
-        # Rate limiting
-        limit_req zone=api burst=20 nodelay;
-
-        # Proxy a la aplicación FastAPI
+        # React SPA (html/mi-app/dist)
         location / {
-            proxy_pass http://app;
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+            index index.html;
+        }
+
+        # API → FastAPI (puerto 5050)
+        location /api/ {
+            proxy_pass http://app:5050/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
         }
 
-        # Health check
-        location /health {
-            proxy_pass http://app/health;
-            access_log off;
-        }
-
-        # Documentación de la API
+        # Docs FastAPI
         location /docs {
-            proxy_pass http://app/docs;
-        }
-
-        location /redoc {
-            proxy_pass http://app/redoc;
-        }
-
-        # Archivos estáticos (si los hay)
-        location /static/ {
-            alias /app/static/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
+            proxy_pass http://app:5050/docs;
         }
     }
-
-    # Configuración para HTTPS (descomentar en producción)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name localhost;
-    #
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #
-    #     # Resto de la configuración igual que el servidor HTTP
-    # }
 }
