--- a/requirements.txt
+++ b/requirements.txt
@@ -30,4 +30,5 @@ structlog==23.2.0
 # Validación de datos
 email-validator==2.1.0
 # phone-validator==0.0.1  # No existe
-fast-mail==0.0.6
+fastapi-mail
+passlib[bcrypt]==1.7.4
