Cambios con el nginx frontend y otros archivos

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,16 +8,9 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name _;
 
-        # React SPA (html/mi-app/dist)
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-            index index.html;
-        }
-
-        # API → FastAPI (puerto 5050)
+        # API → FastAPI (se atiende aquí)
         location /api/ {
             proxy_pass http://app:5050/;
             proxy_set_header Host $host;
@@ -27,6 +20,13 @@ http {
         # Docs FastAPI
         location /docs {
             proxy_pass http://app:5050/docs;
+        }
+
+        # TODO LO DEMÁS (/, /login, /login/, /assets, etc.) → frontend
+        location / {
+            proxy_pass http://frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
     }
 }
