--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.frontend
+    volumes:
+      - ./nginx-frontend.conf:/etc/nginx/conf.d/default.conf:ro
     container_name: gestion_accesos_frontend
     ports:
       - "3000:80"
