Cambios a las imagenes y diversas correciones

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ http {
         listen 80;
         server_name _;
 
-        # API → FastAPI (se atiende aquí)
+        # API → FastAPI
         location /api/ {
             proxy_pass http://app:5050/;
             proxy_set_header Host $host;
@@ -22,7 +22,14 @@ http {
             proxy_pass http://app:5050/docs;
         }
 
-        # TODO LO DEMÁS (/, /login, /login/, /assets, etc.) → frontend
+        # ⭐ ARCHIVOS ESTÁTICOS (imágenes, etc.)
+        location /src/ {
+            proxy_pass http://app:5050/src/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # TODO LO DEMÁS → frontend
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
@@ -30,3 +37,4 @@ http {
         }
     }
 }
+
