--- a/html/mi-app/package.json
+++ b/html/mi-app/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^3.4.0"
   },
